--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "korean_name",
+  "name": "prviouslife",
   "version": "1.0.0",
-  "description": "Find your korean name",
+  "description": "what was my previous life?",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dydtjq94/korean_name.git"
+  "scripts": {
+    "dev:server": "nodemon --exec babel-node init.js --delay 0.5",
+    "dev:assets": "WEBPACK_ENV=development webpack -w",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
-  "author": "Yongsub",
+  "author": "myself",
+  "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
@@ -19,22 +21,26 @@
     "cookie-parser": "^1.4.5",
     "css-loader": "^3.5.3",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.22.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
+    "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
-  "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 0.5",
-    "dev:assets": "WEBPACK_ENV=development webpack -w",
-    "build:assets": "WEBPACK_ENV=production webpack"
-  },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "nodemon": "^2.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zunopark/previous-life.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zunopark/previous-life/issues"
+  },
+  "homepage": "https://github.com/zunopark/previous-life#readme"
 }
